# skynet-backend

./: .gitignore  README.md  pyproject.toml  voices.json
public/: server-wake-up-dummy-file.txt
skynet_backend/: piper_tts.py
skynet_backend/api_clients/lazypy/: client.py  models.py
skynet_backend/api_clients/responsive_voice/: client.py
skynet_backend/common/: errors.py  g4f_ignoring_providers.py
skynet_backend/common/api_clients/: deepai_client.py  fake_user_agent.py
skynet_backend/common/api_clients/lazypy/: client.py  models.py
skynet_backend/common/api_clients/responsive_voice/: client.py
skynet_backend/core/errors/: external_api_error.py
skynet_backend/core/models/: llm_conversation.py  llm_message.py
skynet_backend/core/services/: llm_conversation_service.py  llm_speech_service.py
skynet_backend/core/utils/: llm_conversation_message_builder.py
skynet_backend/websockets_api/: config.py  dependencies.py  error_handling.py  main.py  socketio_server.py
skynet_backend/websockets_api/events/: __init__.py  start_llm_conversation.py
skynet_backend/websockets_api/utils/: dependencies.py  errors.py  event_data_validation.py  socketio.py
