[tool.poetry]
name = "skynet-backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.scripts]
websockets-api = "skynet_backend.websockets_api.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.8.1"
pydantic = "^2.10.6"
python-socketio = {extras = ["asyncio"], version = "^5.12.1"}
uvicorn = "^0.34.0"
httpx = {extras = ["socks"], version = "^0.28.1"}
keylimiter = "^0.1.5"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.4"
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
