[project]
name = "skynet-backend"
version = "0.1.0"
description = ""
authors = []
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "pydantic-settings>=2.8.1,<3",
    "pydantic>=2.10.6,<3",
    "python-socketio[asyncio]>=5.12.1,<6",
    "uvicorn>=0.34.0,<0.35",
    "httpx[socks]>=0.28.1,<0.29",
    "pyrate-limiter>=3.7.0,<4",
    "open-minded>=0.1.5,<0.2",
]

[dependency-groups]
dev = [
    "pylint>=3.3.4,<4",
    "black>=25.1.0,<26",
]

